--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  firebase_core: ^0.5.0+1
-  firebase_messaging: ^7.0.3
-  cloud_firestore: ^0.14.1+3
+  firebase_core: ^0.7.0
+  firebase_messaging: ^8.0.0-dev.14
+  cloud_firestore: ^0.16.0
 
   uuid: ^2.2.2
   intl: ^0.16.1
