--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
 
+  firebase_core: ^0.7.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
