--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -24,14 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+  cupertino_icons: ^1.0.2
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-
-  firebase_auth: ^0.20.0+1
-  google_sign_in: ^4.5.9
-  shared_preferences: ^0.5.12+4
+  firebase_auth: ^1.0.3
+  google_sign_in: ^5.0.1
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
