--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   firebase_messaging: ^10.0.2
   cloud_firestore: ^2.2.2
 
+  googleapis_auth: ^1.1.0
+
   uuid: ^3.0.4
   intl: ^0.17.0
   get_it: ^6.1.1
