--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,24 +4,24 @@ version: 0.0.1
 homepage: ''
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  firebase_core: ^1.6.0
-  firebase_messaging: ^10.0.7
-  cloud_firestore: ^2.5.2
+  firebase_core: ^2.5.0
+  firebase_messaging: ^14.2.2
+  cloud_firestore: ^4.4.0
 
-  googleapis_auth: ^1.1.0
+  googleapis_auth: ^1.3.1
 
-  uuid: ^3.0.4
+  uuid: ^3.0.7
   intl: ^0.17.0
   get_it: ^7.2.0
-  provider: ^6.0.0
-  image_picker: ^0.8.4
-  cached_network_image: ^3.1.0
+  provider: ^6.0.5
+  image_picker: ^0.8.6+1
+  cached_network_image: ^3.2.3
 
 
 dev_dependencies:
