--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   firebase_core: ^2.5.0
   firebase_messaging: ^14.2.2
   cloud_firestore: ^4.4.0
+  firebase_storage: ^11.0.13
 
   googleapis_auth: ^1.3.1
 
