--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage: ''
 
 environment:
-  sdk: ">=2.19.0 <3.0.0"
+  sdk: '>=3.0.3 <4.0.0'
 
 dependencies:
   flutter:
@@ -38,8 +38,7 @@ flutter:
 
   # To add assets to your package, add an assets section, like this:
   assets:
-    - assets/
-    - assets/images/
+    - lib/res/images/
   #
   # For details regarding assets in packages, see
   # https://flutter.dev/assets-and-images/#from-packages
