--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,18 +10,19 @@ dependencies:
   flutter:
     sdk: flutter
 
-  firebase_core: ^2.5.0
-  firebase_messaging: ^14.2.2
-  cloud_firestore: ^4.4.0
-  firebase_storage: ^11.0.13
+  provider: ^6.0.5
+  get_it: ^7.6.0
 
-  googleapis_auth: ^1.3.1
+  firebase_core: ^2.15.0
+  cloud_firestore: ^4.8.4
+  firebase_storage: ^11.2.5
+  firebase_messaging: ^14.6.5
+
+  googleapis_auth: ^1.4.1
 
   uuid: ^3.0.7
   intl: ^0.18.0
-  get_it: ^7.2.0
-  provider: ^6.0.5
-  image_picker: ^0.8.6+1
+  image_picker: ^1.0.1
   cached_network_image: ^3.2.3
 
   http: ^0.13.5
